Projet GL/Projet_GL/src/test/deca/context/invalid/increment3/not-int.deca
// test not 1

// Historique : cree le 20/01/2023

{
    boolean b = !0;
    if(b){
        print("error");
    }
}